@@ -1,5 +1,7 @@
 DIST minitunes-0.1.1.tar.gz 210701 RMD160 f6f0a5cfb1c24a1c1b1e8a519cae531461b2abfc SHA1 3e864199a72e16c720a1c724132dd2cc7d4ef82d SHA256 b8610e61ac69ba15637bf74a88db089d1ba58445b3cc3b0d40d2d37f98899c3b
+DIST minitunes-1.0.tar.gz 315439 RMD160 60586a3d6f1016c0c02c497255154746bf603ebd SHA1 902182724add08bade9bab75a8088a4eaa84d303 SHA256 2ee07c0b8a121cbd994859988e183d5c48bd02c88ba281daaf3a7660ebd5f558
 EBUILD minitunes-0.1.1.ebuild 591 RMD160 749df38ba1bbd4bf88da1b6eb011cb77266aba94 SHA1 ad2f37c0587a3fa870164b839418f6b62d37ca93 SHA256 99424d8680850ed6e6bcf771afe8cc5916208f04cb3ada33f8a5f4ee203de3a1
+EBUILD minitunes-1.0.ebuild 591 RMD160 749df38ba1bbd4bf88da1b6eb011cb77266aba94 SHA1 ad2f37c0587a3fa870164b839418f6b62d37ca93 SHA256 99424d8680850ed6e6bcf771afe8cc5916208f04cb3ada33f8a5f4ee203de3a1
 EBUILD minitunes-9999.ebuild 556 RMD160 a80bc20994383e7213e66d3e6b2310174cf91dd1 SHA1 45090ab57913b85bceef159d9f7ceb90a1fb2b7d SHA256 75fd36f18f23fac3baebd257b8b66881b297cf511b57a3ca0296eef08081e847
-MISC ChangeLog 536 RMD160 8feb81ef41a4fa507c611a6ce0eea8f9d014985c SHA1 32d87943bb0aea1776f3206e7d6936d2ad7d2f2e SHA256 22b98136e8b9f946ccb1b9d6b26a4461099ed81f595c2b763164214aebd7db7a
+MISC ChangeLog 648 RMD160 260af6d9e7623631fcc27151f3be32721c26e4e1 SHA1 6622bc72a7b228b6c7fd0c9e3b499e424d35dfd4 SHA256 15a6d337606c2716f3722621b929b9626536177c47de718157de4415c55cde10
 MISC metadata.xml 226 RMD160 093e2a5510979ff71f1f585e71eca1f015350a00 SHA1 bf06e32067d1d1968de31788927d267dd3f8208d SHA256 015b1c2b2efefed02f3bd9413e0abffd97ee2d0bec2cc90bc5e0f5ff6fc00f0c
