@@ -1,0 +1,32 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI="4"
+
+inherit qt4-r2
+
+DESCRIPTION="Qt4 music player."
+HOMEPAGE="http://flavio.tordini.org/minitunes"
+SRC_URI="http://flavio.tordini.org/files/${PN}/${P}.tar.gz"
+
+LICENSE="GPL-3"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+RDEPEND="
+	x11-libs/qt-gui:4[dbus]
+	x11-libs/qt-sql:4[sqlite]
+	|| ( x11-libs/qt-phonon:4 media-libs/phonon )
+	media-libs/taglib
+"
+DEPEND="${RDEPEND}"
+
+S="${WORKDIR}/${PN}"
+
+DOCS="CHANGES TODO"
+
+src_configure() {
+	eqmake4 ${PN}.pro PREFIX="/usr"
+}
