@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*minitunes-1.0 (03 Jul 2011)
+
+  03 Jul 2011; Nikoli <nikoli@lavabit.com> +minitunes-1.0.ebuild:
+  version bump
+
   01 Jul 2011; Nikoli <nikoli@lavabit.com> minitunes-0.1.1.ebuild,
   minitunes-9999.ebuild:
   migrate to git-2 and EAPI4
